logs/Slang/chapter-6/6.16.5--string_tolower.sv.log
name: string_tolower
description: string.tolower()  tests
should_fail: 0
tags: 6.16.5
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.5--string_tolower.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.5--string_tolower.sv:9:14: error: invalid member access for type 'string'
	string b = a.tolower();
	           ~^~~~~~~~
